Public release final

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -143,11 +143,11 @@
 
 		policy_option_tec_authoritarian_C:0 "$ethic_authoritarian$ Oppression"
 		policy_option_tec_authoritarian_C_name:0 "$policy_option_tec_authoritarian_C$"
-		policy_option_tec_authoritarian_C_desc:0 "There is no room for dissidence or protests, there is no room for lack of efficiency or vagrancy; every citizen is a cog in the machine and must slog from sunshine to sunrise to ensure our prosperity.\n\n§EThis policy is focused on £job_enforcer£ §HEnforcers§! Jobs control§!\n £job_enforcer£ §YEnforcers§! increase £job_toiler£ §YWorker§! and §YSlave§! pop output by §G1%§! each\n £job_enforcer£ §YEnforcers§! reduce §R5§! less £crime£ §Y$PLANET_CRIME_TITLE$§!"
+		policy_option_tec_authoritarian_C_desc:0 "There is no room for dissidence or protests, there is no room for lack of efficiency or vagrancy; every citizen is a cog in the machine and must slog from sunshine to sunrise to ensure our prosperity.\n\n§EThis policy is focused on £job_enforcer£ §HEnforcers§! Jobs control§!\n £job_enforcer£ §YEnforcers§! increase £job_toiler£ §YWorker§! and §YSlave§! pop output by §G1%§! each\n £job_enforcer£ §YEnforcers§! reduce §R5§! less §Y$tec_loc_crime$§!"
 
 		policy_option_tec_fanatic_authoritarian_C:0 "$policy_option_tec_authoritarian_C$"
 		policy_option_tec_fanatic_authoritarian_C_name:0 "$policy_option_tec_authoritarian_C$"
-		policy_option_tec_fanatic_authoritarian_C_desc:0 "TO DO.\n\n§EThis policy is focused on £job_enforcer£ §HEnforcers§! Jobs control§!\n £job_enforcer£ §YEnforcers§! increase £job_toiler£ §YWorker§! and §YSlave§! pop output by §G2%§! each\n£job_enforcer£ §YEnforcers§! reduce §R5§! less £crime£ §Y$PLANET_CRIME_TITLE$§!"
+		policy_option_tec_fanatic_authoritarian_C_desc:0 "TO DO.\n\n§EThis policy is focused on £job_enforcer£ §HEnforcers§! Jobs control§!\n £job_enforcer£ §YEnforcers§! increase £job_toiler£ §YWorker§! and §YSlave§! pop output by §G2%§! each\n£job_enforcer£ §YEnforcers§! reduce §R5§! less §Y$tec_loc_crime$§!"
 
 		#- Xenophobe
 		#	> +5%-10% main species pop output
@@ -479,27 +479,27 @@
 
 		policy_option_tec_cooperative_A:0 "$ethic_socialism$ Funding"
 		policy_option_tec_cooperative_A_name:0 "$policy_option_tec_cooperative_A$"
-		policy_option_tec_cooperative_A_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_cooperative_A_desc:0 "The usage of goods and income to promote potential housing and services to the public will ensure everyone has a way of living and feel protected.\n\n§EThis policy is focused on §HHousing Management§!§!"
 
 		policy_option_tec_fanatic_cooperative_A:0 "$policy_option_tec_cooperative_A$"
 		policy_option_tec_fanatic_cooperative_A_name:0 "$policy_option_tec_cooperative_A$"
-		policy_option_tec_fanatic_cooperative_A_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_cooperative_A_desc:0 "$policy_option_tec_cooperative_A_desc$"
 
 		policy_option_tec_cooperative_B:0 "$ethic_socialism$ Accordance"
 		policy_option_tec_cooperative_B_name:0 "$policy_option_tec_cooperative_B$"
-		policy_option_tec_cooperative_B_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_cooperative_B_desc:0 "Its the duty of everyone to provide the necessary means for others to thrive, and as such a less commercial use of public services in exchange of better access to any kind of good would fulfill our goal.\n\n§EThis policy is focused on §HClerk Utility§!\n£job_clerk£ Clerks replace §R1§! §Y$tec_loc_trade_value$§! by §G1§! §Y$tec_loc_amenities$§! and §Y$tec_loc_unity$§!"
 
 		policy_option_tec_fanatic_cooperative_B:0 "$policy_option_tec_cooperative_B$"
 		policy_option_tec_fanatic_cooperative_B_name:0 "$policy_option_tec_cooperative_B$"
-		policy_option_tec_fanatic_cooperative_B_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_cooperative_B_desc:0 "Its the duty of everyone to provide the necessary means for others to thrive, and as such a less commercial use of public services in exchange of better access to any kind of good would fulfill our goal.\n\n§EThis policy is focused on §HClerk Utility§!\n£job_clerk£ Clerks replace §R2§! §Y$tec_loc_trade_value$§! by §G2§! §Y$tec_loc_amenities$§! and §Y$tec_loc_unity$§!"
 
 		policy_option_tec_cooperative_C:0 "$ethic_socialism$ Distribution"
 		policy_option_tec_cooperative_C_name:0 "$policy_option_tec_cooperative_C$"
-		policy_option_tec_cooperative_C_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_cooperative_C_desc:0 "Everyone should have the means to live and thrive as they desire; less work days, better public systems, healthier diet and better public spaces will ensure they do.\n\n§EThis policy is focused on §HPop Performance§!\n£pop£ Pops consume §R0.5§! extra §Y$tec_loc_amenities$§! but gain extra £job£ §GOutput§! and §Y$tec_loc_happiness$§!"
 
 		policy_option_tec_fanatic_cooperative_C:0 "$policy_option_tec_cooperative_C$"
 		policy_option_tec_fanatic_cooperative_C_name:0 "$policy_option_tec_cooperative_C$"
-		policy_option_tec_fanatic_cooperative_C_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_cooperative_C_desc:0 "Everyone should have the means to live and thrive as they desire; less work days, better public systems, healthier diet and better public spaces will ensure they do.\n\n§EThis policy is focused on §HPop Performance§!\n£pop£ Pops consume §R1§! extra §Y$tec_loc_amenities$§! but gain extra £job£ §GOutput§! and §Y$tec_loc_happiness$§!"
 
 		#- Competitive
 		#	> +10-20% Trade value
@@ -514,27 +514,27 @@
 
 		policy_option_tec_competitive_A:0 "$ethic_capitalism$ Freedom"
 		policy_option_tec_competitive_A_name:0 "$policy_option_tec_competitive_A$"
-		policy_option_tec_competitive_A_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_competitive_A_desc:0 "We must encourage our citizens to invest, to create value, to redirect the economic flow towards progress.\n\n§EThis policy is focused on §HPop Entrepreneurship§!"
 
 		policy_option_tec_fanatic_competitive_A:0 "$policy_option_tec_competitive_A$"
 		policy_option_tec_fanatic_competitive_A_name:0 "$policy_option_tec_competitive_A$"
-		policy_option_tec_fanatic_competitive_A_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_competitive_A_desc:0 "$policy_option_tec_competitive_A_desc$"
 
-		policy_option_tec_competitive_B:0 "$ethic_capitalism$ Market"
+		policy_option_tec_competitive_B:0 "$ethic_capitalism$ Profiteering"
 		policy_option_tec_competitive_B_name:0 "$policy_option_tec_competitive_B$"
-		policy_option_tec_competitive_B_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_competitive_B_desc:0 "To squeeze any potential gain is a must; we must intensify the efforts of our menial and retail workers to do more, produce more, make the economy flow upwards.\n\n§EThis policy is focused on §HClerk Utility§!\n£job_clerk£ Clerks replace §R1§! §Y$tec_loc_amenities$§! by §G2§! §Y$tec_loc_trade_value$§!"
 
 		policy_option_tec_fanatic_competitive_B:0 "$policy_option_tec_competitive_B$"
 		policy_option_tec_fanatic_competitive_B_name:0 "$policy_option_tec_competitive_B$"
-		policy_option_tec_fanatic_competitive_B_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_competitive_B_desc:0 "To squeeze any potential gain is a must; we must intensify the efforts of our menial and retail workers to do more, produce more, make the economy flow upwards.\n\n§EThis policy is focused on §HClerk Utility§!\n£job_clerk£ Clerks replace §R2§! §Y$tec_loc_amenities$§! by §G4§! §Y$tec_loc_trade_value$§!"
 
-		policy_option_tec_competitive_C:0 "$ethic_capitalism$ Profiteering"
+		policy_option_tec_competitive_C:0 "$ethic_capitalism$ Market"
 		policy_option_tec_competitive_C_name:0 "$policy_option_tec_competitive_C$"
-		policy_option_tec_competitive_C_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_competitive_C_desc:0 "Numbers, investment, trading... Elements that consolidate the foundation of our society and elements that must be prioritized over any other thing.\n\n§EThis policy is focused on §HCommercial Efficiency§!"
 
 		policy_option_tec_fanatic_competitive_C:0 "$policy_option_tec_competitive_C$"
 		policy_option_tec_fanatic_competitive_C_name:0 "$policy_option_tec_competitive_C$"
-		policy_option_tec_fanatic_competitive_C_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_competitive_C_desc:0 "$policy_option_tec_competitive_C_desc$"
 
 		#- Ecologist
 		#	> Remove consumer goods upkeep
@@ -545,29 +545,29 @@
 		policy_tec_ecologist_ethic_policy:0 "$ethic_green$ Ethic Policy"
 		policy_tec_ecologist_ethic_policy_desc:0 "All that surround us needs to be treated with respect, elevation and care."
 
-		policy_option_tec_ecologist_A:0 "$ethic_green$ Harmony"
+		policy_option_tec_ecologist_A:0 "$ethic_green$ Preservation"
 		policy_option_tec_ecologist_A_name:0 "$policy_option_tec_ecologist_A$"
-		policy_option_tec_ecologist_A_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_ecologist_A_desc:0 "We must be one with nature in order to understand and thrive with it.\n\n§EThis policy is focused on §HNatural Preservation§!"
 
 		policy_option_tec_fanatic_ecologist_A:0 "$policy_option_tec_ecologist_A$"
 		policy_option_tec_fanatic_ecologist_A_name:0 "$policy_option_tec_ecologist_A$"
-		policy_option_tec_fanatic_ecologist_A_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_ecologist_A_desc:0 "$policy_option_tec_ecologist_A_desc$"
 
 		policy_option_tec_ecologist_B:0 "$ethic_green$ Coexistence"
 		policy_option_tec_ecologist_B_name:0 "$policy_option_tec_ecologist_B$"
-		policy_option_tec_ecologist_B_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_ecologist_B_desc:0 "The natural order requires blending within, being one with it - It's our duty to coexist and thrive at the same time we ensure our environment thrives on par.\n\n§EThis policy is focused on §HNatural Coexistence§!"
 
 		policy_option_tec_fanatic_ecologist_B:0 "$policy_option_tec_ecologist_B$"
 		policy_option_tec_fanatic_ecologist_B_name:0 "$policy_option_tec_ecologist_B$"
-		policy_option_tec_fanatic_ecologist_B_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_ecologist_B_desc:0 "$policy_option_tec_ecologist_B_desc$"
 
 		policy_option_tec_ecologist_C:0 "$ethic_green$ Reformation"
 		policy_option_tec_ecologist_C_name:0 "$policy_option_tec_ecologist_C$"
-		policy_option_tec_ecologist_C_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_ecologist_C_desc:0 "All natural things can be improved, enhanced, redone... the flaws nature can't correct are the focus of our intellect, the boons nature offer are the priority to propagate and elevate.\n\n§EThis policy is focused on §HNatural Improvement§!\n§Y$tec_loc_terraform$ing§! a planet provide §G3-9§! months worth of §H$tec_loc_unity$§!, based on the type of terraformation used"
 
 		policy_option_tec_fanatic_ecologist_C:0 "$policy_option_tec_ecologist_C$"
 		policy_option_tec_fanatic_ecologist_C_name:0 "$policy_option_tec_ecologist_C$"
-		policy_option_tec_fanatic_ecologist_C_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_ecologist_C_desc:0 "All natural things can be improved, enhanced, redone... the flaws nature can't correct are the focus of our intellect, the boons nature offer are the priority to propagate and elevate.\n\n§EThis policy is focused on §HNatural Improvement§!\n§Y$tec_loc_terraform$ing§! a planet provide §G6-18§! months worth of §H$tec_loc_unity$§!, based on the type of terraformation used"
 
 		#- Industrialist
 		#	> Remove minerals output
@@ -578,29 +578,29 @@
 		policy_tec_industrialist_ethic_policy:0 "$ethic_industrial$ Ethic Policy"
 		policy_tec_industrialist_ethic_policy_desc:0 "No one can or should stop the progress, constant production and creation of infrastructure will lead us forward."
 
-		policy_option_tec_industrialist_A:0 "$ethic_industrial$ Growth"
+		policy_option_tec_industrialist_A:0 "$ethic_industrial$ Optimization"
 		policy_option_tec_industrialist_A_name:0 "$policy_option_tec_industrialist_A$"
-		policy_option_tec_industrialist_A_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_industrialist_A_desc:0 "Infrastructural optimization is a must if we want to reach the max performance on production.\n\n§EThis policy is focused on §HConstruction Efficiency§!"
 
 		policy_option_tec_fanatic_industrialist_A:0 "$policy_option_tec_industrialist_A$"
 		policy_option_tec_fanatic_industrialist_A_name:0 "$policy_option_tec_industrialist_A$"
 		policy_option_tec_fanatic_industrialist_A_desc:0 "TO DO.\n\n§ETO DO§!"
 
 		policy_option_tec_industrialist_B:0 "$ethic_industrial$ Development"
-		policy_option_tec_industrialist_B_name:0 "A"
-		policy_option_tec_industrialist_B_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_industrialist_B_name:0 "$policy_option_tec_industrialist_B$"
+		policy_option_tec_industrialist_B_desc:0 "We must give space for our specialized crafters to theorise, improve and enhance workspaces, architecture and development overall.\n\n§EThis policy is focused on §HIndustrial Progress§!"
 
 		policy_option_tec_fanatic_industrialist_B:0 "$policy_option_tec_industrialist_B$"
 		policy_option_tec_fanatic_industrialist_B_name:0 "$policy_option_tec_industrialist_B$"
-		policy_option_tec_fanatic_industrialist_B_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_industrialist_B_desc:0 "$policy_option_tec_industrialist_B_desc$"
 
 		policy_option_tec_industrialist_C:0 "$ethic_industrial$ Overdrive"
 		policy_option_tec_industrialist_C_name:0 "$policy_option_tec_industrialist_C$"
-		policy_option_tec_industrialist_C_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_industrialist_C_desc:0 "Workplace efficiency and more tools will allow our crafters to produce new and better materials and goods.\n\n§EThis policy is focused on §HIndustrial Efficiency§!"
 
 		policy_option_tec_fanatic_industrialist_C:0 "$policy_option_tec_industrialist_C$"
 		policy_option_tec_fanatic_industrialist_C_name:0 "$policy_option_tec_industrialist_C$"
-		policy_option_tec_fanatic_industrialist_C_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_industrialist_C_desc:0 "$policy_option_tec_industrialist_C_desc$"
 
 		#- Elitist
 		#	> Good as it is, i think
@@ -615,27 +615,27 @@
 
 		policy_option_tec_elitist_A:0 "Elitist Distinction"
 		policy_option_tec_elitist_A_name:0 "$policy_option_tec_elitist_A$"
-		policy_option_tec_elitist_A_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_elitist_A_desc:0 "Those who form the elite must prove they are worthy.\n\n§EThis policy is focused on §HElite Efficiency§!"
 
 		policy_option_tec_fanatic_elitist_A:0 "$policy_option_tec_elitist_A$"
 		policy_option_tec_fanatic_elitist_A_name:0 "$policy_option_tec_elitist_A$"
-		policy_option_tec_fanatic_elitist_A_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_elitist_A_desc:0 "$policy_option_tec_elitist_A_desc$"
 
 		policy_option_tec_elitist_B:0 "Elitist Optimization"
-		policy_option_tec_elitist_B_name:0 "A"
-		policy_option_tec_elitist_B_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_elitist_B_name:0 "$policy_option_tec_elitist_B$"
+		policy_option_tec_elitist_B_desc:0 "An ample selection of potential studies, tools and spaces will benefit the development process of our best citizens.\n\n§EThis policy is focused on §HElite Agency§!"
 
 		policy_option_tec_fanatic_elitist_B:0 "$policy_option_tec_elitist_B$"
 		policy_option_tec_fanatic_elitist_B_name:0 "$policy_option_tec_elitist_B$"
-		policy_option_tec_fanatic_elitist_B_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_elitist_B_desc:0 "$policy_option_tec_elitist_B_desc$"
 
 		policy_option_tec_elitist_C:0 "Elitist Superiority"
 		policy_option_tec_elitist_C_name:0 "$policy_option_tec_elitist_C$"
-		policy_option_tec_elitist_C_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_elitist_C_desc:0 "It is undeniable only the best must be the ones who guard and guide our society, and so only the best will be at the higher reaches of it.\n\n§EThis policy is focused on §HElite Governance§!"
 
 		policy_option_tec_fanatic_elitist_C:0 "$policy_option_tec_elitist_C$"
 		policy_option_tec_fanatic_elitist_C_name:0 "$policy_option_tec_elitist_C$"
-		policy_option_tec_fanatic_elitist_C_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_elitist_C_desc:0 "$policy_option_tec_elitist_C_desc$"
 
 		#- Pluralist
 		#	> Rename
@@ -647,27 +647,27 @@
 
 		policy_option_tec_pluralist_A:0 "$ethic_pluralist$ Preparation"
 		policy_option_tec_pluralist_A_name:0 "$policy_option_tec_pluralist_A$"
-		policy_option_tec_pluralist_A_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_pluralist_A_desc:0 "All available resources must be provided for our guiding hands and those who aspire to be like them to thrive and go forward.\n\n§EThis policy is focused on §HPluralist Improvement§!"
 
 		policy_option_tec_fanatic_pluralist_A:0 "$policy_option_tec_pluralist_A$"
 		policy_option_tec_fanatic_pluralist_A_name:0 "$policy_option_tec_pluralist_A$"
-		policy_option_tec_fanatic_pluralist_A_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_pluralist_A_desc:0 "$policy_option_tec_pluralist_A_desc$"
 
 		policy_option_tec_pluralist_B:0 "$ethic_pluralist$ Equity"
 		policy_option_tec_pluralist_B_name:0 "$policy_option_tec_pluralist_B$"
-		policy_option_tec_pluralist_B_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_pluralist_B_desc:0 "We must provide similar resources for similar needs, at not equal levels - Whatever is necessary will be provided.\n\n§EThis policy is focused on §HPluralist Efficiency§!"
 
 		policy_option_tec_fanatic_pluralist_B:0 "$policy_option_tec_pluralist_B$"
 		policy_option_tec_fanatic_pluralist_B_name:0 "$policy_option_tec_pluralist_B$"
-		policy_option_tec_fanatic_pluralist_B_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_pluralist_B_desc:0 "$policy_option_tec_pluralist_B_desc$"
 
-		policy_option_tec_pluralist_C:0 "$ethic_pluralist$ Obligation"
+		policy_option_tec_pluralist_C:0 "$ethic_pluralist$ Admission"
 		policy_option_tec_pluralist_C_name:0 "$policy_option_tec_pluralist_C$"
-		policy_option_tec_pluralist_C_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_pluralist_C_desc:0 "Anyone willing to serve society as a leader is welcome; expanding our possible bureaucratic and societal needs to welcome them is a must.\n\n§EThis policy is focused on §HPluralist Leadership§!"
 
 		policy_option_tec_fanatic_pluralist_C:0 "$policy_option_tec_pluralist_C$"
 		policy_option_tec_fanatic_pluralist_C_name:0 "$policy_option_tec_pluralist_C$"
-		policy_option_tec_fanatic_pluralist_C_desc:0 "TO DO.\n\n§ETO DO§!"
+		policy_option_tec_fanatic_pluralist_C_desc:0 "$policy_option_tec_pluralist_C_desc$"
 
 		#GESTALT:
 		#- Apathy
