--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -407,10 +407,13 @@
 	civic_technocracy_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_technocrat£ §Y$job_tec_technocrat_plural$§!.\n- $job_tec_technocrat_effect_desc$\n\n"
 	# pARAGON
 	#  civic_technocracy_tooltip:5 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_head_researcher£ §Y$job_head_researcher_plural$§!\n§YScientists§! start with random §YExpertise§! trait"
+	councilor_technocracy:0 "Senior Technocrat"
+	councilor_technocracy_female:0 "$councilor_technocracy$"
+	councilor_technocracy_desc:0 "The $TITLE$ ensures the correct development of society according do the established performant patterns is promoted and shared between departments."
 
 	civic_tec_regular_science_directorate:0 "§G§!Scientific Directorate" 
 	civic_tec_regular_science_directorate_desc:0 "['concept_tec_ruler_replace_civic']\n\nAs there is no progress without research, and there is no research without progress, this civilization relies on councils of the wisest and most prepared scientists for administration, advancements and society development, occupying the highest political charges while keeping their Inventiveness and research."
-	civic_tec_regular_scientific_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_head_researcher£ §Y$job_head_researcher_plural$§!.\n- $job_head_researcher_effect_desc$.\n§YScientists§! have twice as high a chance to discover a technology that falls within their field of study.\n"
+	civic_tec_regular_science_directorate_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_head_researcher£ §Y$job_head_researcher_plural$§!.\n- $job_head_researcher_effect_desc$.\n§YScientists§! start with random §YExpertise§! trait.\n"
 
  # Coop
 
