--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -80,7 +80,7 @@
 # ---------------------------------------------------------------
  # Misc
 	TEC_ETHIC_JUMP:0 "\n"
-	TEC_ETHIC_CUSTOMIZABLE:0 "§E£system£ This ethic can be §Hcustomized§! with an ['concept_tec_ethic_policy']\n\n"
+	TEC_ETHIC_CUSTOMIZABLE:0 "§E£system£ This ethic can be §Hcustomized§! with an ['concept_tec_ethic_policy']§!\n\n"
  # /
  # Vanilla
 	# Note: Overwrote to adjust some values and small loc things
@@ -177,7 +177,7 @@
 
 	TEC_ETHIC_MILITARIST_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_doing_your_part']§! edict"
 	TEC_ETHIC_MILITARIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_militarist']§!"
-	TEC_ETHIC_MILITARIST_MECHANIC:0 "§HMechanic Bonus:§! TO DO"
+	TEC_ETHIC_MILITARIST_MECHANIC:0 "§HMechanic Bonus:§! Constructing £mod_country_naval_cap_add£ §YMilitary Ships§! will provide §Y$tec_loc_unity$§! based on the ship type"
 
 	# Pacif
 	ethic_pacifist:0 "Pacifist"
@@ -193,7 +193,7 @@
 
 	TEC_ETHIC_PACIFIST_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_peace_festivals']§! edict"
 	TEC_ETHIC_PACIFIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_pacifist']§!"
-	TEC_ETHIC_PACIFIST_MECHANIC:0 "§HMechanic Bonus:§! TO DO"
+	TEC_ETHIC_PACIFIST_MECHANIC:0 "§HMechanic Bonus:§! Allows the £planet£ §Y['concept_tec_ethic_pacifist_mechanic_festivals']§! planetary decision"
 
 	# Spi
 	ethic_spiritualist:0 "Spiritualist"
@@ -252,7 +252,7 @@
 	TEC_ETHIC_COOPERATIVE_LIVING_STANDARD:0 "§HLiving Standard:§! Allows §Y['concept_tec_living_standard_utopian']§! Living Standards"
 	TEC_ETHIC_COOPERATIVE_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_social_benefits']§! edict"
 	TEC_ETHIC_COOPERATIVE_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_cooperative']§!"
-	TEC_ETHIC_COOPERATIVE_MECHANIC:0 "§HMechanic Bonus:§! TO DO"
+	TEC_ETHIC_COOPERATIVE_MECHANIC:0 "§HMechanic Bonus:§! Unemployed pops become §YPublic Workers§!, which consume extra §Y$tec_loc_amenities$§! in exchange of producing extra §Y$tec_loc_unity$§! and not suffering §Y$tec_loc_happiness$§! maluses, and benefit from unemployment bonuses from living standards"
 
 	# Comp
 	ethic_capitalism:0 "Competitive"
@@ -337,8 +337,8 @@
 	TEC_ETHIC_ELITIST_LIVING_STANDARD:0 "§HLiving Standard:§! Allows §Y['concept_tec_living_standard_academic']§! Living Standards"
 	TEC_ETHIC_ELITIST_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_elite_boosting']§! edict"
 	TEC_ETHIC_ELITIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_elitist']§!"
-	TEC_ETHIC_FANATIC_ELITIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders have a §G100%§! reduced chance of gaining a §HNegative Trait§!"
-	TEC_ETHIC_ELITIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders have a §G50%§! reduced chance of gaining a §HNegative Trait§!"
+	TEC_ETHIC_FANATIC_ELITIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders have a §G50%§! reduced chance of gaining a §HNegative Trait§!"
+	TEC_ETHIC_ELITIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders have a §G25%§! reduced chance of gaining a §HNegative Trait§!"
 
 	# Pluralist
 	ethic_pluralist:0 "Pluralist"
@@ -359,8 +359,8 @@
 	TEC_ETHIC_PLURALIST_LIVING_STANDARD:0 "§HLiving Standard:§! Allows §Y['concept_tec_living_standard_utopian']§! Living Standards"
 	TEC_ETHIC_PLURALIST_EDICT:0 "§HEdict Bonus:§! Allows the use of the £mod_country_edict_fund_add£ §Y['concept_tec_edict_equal_opportunities']§! edict"
 	TEC_ETHIC_PLURALIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_pluralist']§!"
-	TEC_ETHIC_PLURALIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders gain a small amount of §HMonthly Experience§! up to §HLevel 3§!. Non active leaders gain double the amount"
-	TEC_ETHIC_FANATIC_PLURALIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders gain a small amount of §HMonthly Experience§! up to §HLevel 6§!. Non active leaders gain double the amount"
+	TEC_ETHIC_PLURALIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders gain a small amount of §YMonthly Experience§! up to §GLevel 3§!. Non active leaders gain double the amount"
+	TEC_ETHIC_FANATIC_PLURALIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders gain a small amount of §YMonthly Experience§! up to §GLevel 6§!. Non active leaders gain double the amount"
 
 	# Not added
 	ethic_individualist_desc:1 "§LEveryone is equal in basic dignity and rights. The preservation of order, while an admirable goal, does not justify tyranny and oppression either in principle or in practice. Civilization flourishes best when the few do not dominate the many.§!\n"
