--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -638,9 +638,15 @@
 	concept_tec_ethic_building_entepreneur_alias: "Entepreneur Buildings"
 	concept_tec_ethic_building_entepreneur_desc: "TO DO"
  # /
- # Buildings
+ # Jobs
 	concept_tec_ethic_job_social_workers: "Social Workers"
 	concept_tec_ethic_job_social_workers_alias: "Social Worker Jobs"
 	concept_tec_ethic_job_social_workers_desc: "TO DO"
+ # /
+ # Mechanics
+	
+	concept_tec_ethic_pacifist_mechanic_festivals: "Peace Festivals"
+	concept_tec_ethic_pacifist_mechanic_festivals_alias: "Social Worker Jobs"
+	concept_tec_ethic_pacifist_mechanic_festivals_desc: "TO DO"
  # /
 # /
