--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -59,8 +59,10 @@
 	tec_loc_housing: "£housing£ $PLANET_HOUSING_TITLE$"
 	tec_loc_amenities: "£amenities£ $PLANET_AMENITIES_TITLE$"
 	tec_loc_amenities_gestalt: "£amenities_no_happiness£ $PLANET_AMENITIES_TITLE$"
-	tec_loc_amenities: "£crime£ $PLANET_AMENITIES_TITLE$"
-	tec_loc_amenities_gestalt: "£amenities_no_happiness£ $PLANET_AMENITIES_TITLE$"
+	tec_loc_crime: "£crime£ $PLANET_CRIME_TITLE$"
+	tec_loc_crime_gestalt: "£crime£ $MOD_PLANET_CRIME_NO_HAPPINESS_MULT$"
+	tec_loc_happiness: "£happiness£ Happiness"
+
 	tec_loc_stability: "£stability£ $PLANET_STABILITY_TITLE$"
 	tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ Pop Growth Speed"
@@ -103,6 +105,8 @@
 	tec_loc_cannot_reproduce:0 "§RCannot Reproduce Naturally§!"
 
 	tec_loc_failure_rate:0 "§R£job_purge£ Failure Rate§!"
+
+	tec_loc_terraform:0 "£planet£ Terraform"
 
 	tec_blank:0 ""
 
