added ethic specific events + fixed eco/mil

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -179,6 +179,9 @@
 	TEC_ETHIC_MILITARIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_militarist']§!"
 	TEC_ETHIC_MILITARIST_MECHANIC:0 "§HMechanic Bonus:§! Constructing £mod_country_naval_cap_add£ §YMilitary Ships§! will provide §Y$tec_loc_unity$§! based on the ship type"
 
+	edict_tec_militarist_edict:0 "Doing Your Part"
+	edict_tec_militarist_edict_desc:0 "§EMilitarist Ethic Edict§!\n\nEveryone must be ready and prepared to serve our cause when the time comes, either forming part of our armadas, or helping improve or create them directly."
+
 	# Pacif
 	ethic_pacifist:0 "Pacifist"
 	ethic_pacifist_plural:0 "Pacifists"
@@ -232,6 +235,9 @@
 	TEC_ETHIC_MATERIALIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_materialist']§!"
 	TEC_ETHIC_MATERIALIST_MECHANIC:0 "§HMechanic Bonus:§! Can build §H['concept_tec_ethic_building_experimental_labs']§! buildings"
 
+	edict_tec_materialist_edict:0 "Technological Funding"
+	edict_tec_materialist_edict_desc:0 "§EMaterialist Ethic Edict§!\n\nScience is the true way to go forward, discovering new technologies is a duty we must reward accordingly."
+
  # /
  # Evolved
 	# Coop
@@ -273,6 +279,9 @@
 	TEC_ETHIC_COMPETITIVE_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_competitive']§!"
 	TEC_ETHIC_COMPETITIVE_MECHANIC:0 "§HMechanic Bonus:§! Can build £building£ §H['concept_tec_ethic_building_entepreneur']§! on any planet"
 
+	edict_tec_competitive_edict:0 "Market Funding"
+	edict_tec_competitive_edict_desc:0 "§ECompetitive Ethic Edict§!\n\nThe constant influx of min-max and growth curves indicate we need to properly fund our local market production."
+
 	# Ecologist
 	ethic_green:0 "Ecologist"
 	ethic_green_plural:0 "Ecologists"
@@ -296,6 +305,9 @@
 	TEC_ETHIC_ECOLOGIST_MECHANIC:0 "§HMechanic Bonus:§! Can create ['concept_tec_ecoworlds']. Require §HMastery of Nature§! ascension perk for further specialization of those worlds\nAllows §BEcological§! ( £food£ > £consumer_goods£ ) Consumer Goods §BPolicy§! option"
 	TEC_ETHIC_FANATIC_ECOLOGIST_MECHANIC:0 "§HMechanic Bonus:§! Can create and specialize ['concept_tec_ecoworlds'] without requiring the §HMastery of Nature§! ascension perk\nAllows §BEcological§! ( £food£ > £consumer_goods£ ) Consumer Goods §BPolicy§! option"
 
+	edict_tec_ecologist_edict:0 "Nature Bond"
+	edict_tec_ecologist_edict_desc:0 "§EEcologist Ethic Edict§!\n\nWe need to respect our roots, nature and what it can bring us; a myriad of possibilities await undiscovered."
+
 	# Industrial
 	ethic_industrial:0 "Industrialist"
 	ethic_industrial_plural:0 "Industrialists"
@@ -318,6 +330,9 @@
 	TEC_ETHIC_INDUSTRIALIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_industrialist']§!"
 	TEC_ETHIC_INDUSTRIALIST_MECHANIC:0 "§HMechanic Bonus:§! Allows £minerals£ §EMining Subsidizing§! and £alloys£ £consumer_goods£ §EIndustrial Subsidizing§! £trade_value£ trade §EPolicy§! options"
 
+	edict_tec_industrialist_edict:0 "Industrial Overproduction"
+	edict_tec_industrialist_edict_desc:0 "§EIndustrialist Ethic Edict§!\n\nThe fire of the forges of today will brighten the lights of tomorrow."
+
 	# Elitist
 	ethic_elitist:0 "Elitist"
 	ethic_elitist_plural:0 "Elitists"
@@ -339,6 +354,9 @@
 	TEC_ETHIC_ELITIST_POLICY:0 "§HPolicy Bonus:§! Has access to the £political_power£ §Y['concept_tec_ethic_policy_elitist']§!"
 	TEC_ETHIC_FANATIC_ELITIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders have a §G50%§! reduced chance of gaining a §HNegative Trait§!"
 	TEC_ETHIC_ELITIST_MECHANIC:0 "§HMechanic Bonus:§! Leaders have a §G25%§! reduced chance of gaining a §HNegative Trait§!"
+
+	edict_tec_elitist_edict:0 "Elite Boosting"
+	edict_tec_elitist_edict_desc:0 "§EElitist Ethic Edict§!\n\nNew chemical compounds can be used to stimulate creative thinking, focus and capacities of our elite."
 
 	# Pluralist
 	ethic_pluralist:0 "Pluralist"
