ecological policies tweaks + clerk effect fixes

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -522,11 +522,11 @@
 
 		policy_option_tec_competitive_B:0 "$ethic_capitalism$ Profiteering"
 		policy_option_tec_competitive_B_name:0 "$policy_option_tec_competitive_B$"
-		policy_option_tec_competitive_B_desc:0 "To squeeze any potential gain is a must; we must intensify the efforts of our menial and retail workers to do more, produce more, make the economy flow upwards.\n\n§EThis policy is focused on §HClerk Utility§!§!\n£job_clerk£ Clerks replace §R1§! §Y$tec_loc_amenities$§! by §G2§! §Y$tec_loc_trade_value$§!"
+		policy_option_tec_competitive_B_desc:0 "To squeeze any potential gain is a must; we must intensify the efforts of our menial and retail workers to do more, produce more, make the economy flow upwards.\n\n§EThis policy is focused on §HClerk Utility§!§!\n£job_clerk£ Clerks replace §R1§! §Y$tec_loc_amenities$§! by §G1§! §Y$tec_loc_trade_value$§! and §Y$tec_loc_unity$§!"
 
 		policy_option_tec_fanatic_competitive_B:0 "$policy_option_tec_competitive_B$"
 		policy_option_tec_fanatic_competitive_B_name:0 "$policy_option_tec_competitive_B$"
-		policy_option_tec_fanatic_competitive_B_desc:0 "To squeeze any potential gain is a must; we must intensify the efforts of our menial and retail workers to do more, produce more, make the economy flow upwards.\n\n§EThis policy is focused on §HClerk Utility§!§!\n£job_clerk£ Clerks replace §R2§! §Y$tec_loc_amenities$§! by §G4§! §Y$tec_loc_trade_value$§!"
+		policy_option_tec_fanatic_competitive_B_desc:0 "To squeeze any potential gain is a must; we must intensify the efforts of our menial and retail workers to do more, produce more, make the economy flow upwards.\n\n§EThis policy is focused on §HClerk Utility§!§!\n£job_clerk£ Clerks replace §R2§! §Y$tec_loc_amenities$§! by §G2§! §Y$tec_loc_trade_value$§! and §Y$tec_loc_unity$§!"
 
 		policy_option_tec_competitive_C:0 "$ethic_capitalism$ Market"
 		policy_option_tec_competitive_C_name:0 "$policy_option_tec_competitive_C$"
