More ethic/authority tooltip standardization

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3556,6 +3556,20 @@ building_tec_factory_gestalt:0 "\n§HThis building will swap half of the £job_f
 tec_mercantile_commercial_enterprise_needs_t2_hab:0 "§HDue to unsuficient infrastructure, $job_merchant_plural$ are not available until we upgrade the habitat.§!"
 
 tec_mercantile_commercial_enterprise_gestalt_needs_t2_hab:0 "§HDue to unsuficient infrastructure, $job_tec_trade_drone_plural$ are not available until we upgrade the habitat.§!"
+# Scripted modifiers
+
+private_hired: "Private/Hired"
+
+mod_tec_hired_job_base_production_mult: "Base Production from £job£ $private_hired$ Jobs"
+mod_tec_hired_job_base_upkeep_mult: "Base Upkeep from £job£ $private_hired$ Jobs"
+mod_tec_hired_job_trade_add: "$tec_loc_trade_value$ from £job£ $private_hired$ Jobs"
+
+mod_tec_branch_building_base_production_mult: "Base Production from $BRANCH_OFFICE_BUILDINGS$"
+
+mod_tec_ruler_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $RULERS$"
+mod_tec_specialist_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $SPECIALISTS$"
+mod_tec_worker_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $WORKERS$"
+mod_tec_pop_lifestyle_trade_value_add: "$tec_loc_trade_value$ from £pop£ Pops"
 
 # Assembly Localization
 
