--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -298,7 +298,11 @@ tec_cui_aiuth_fragment_scientist_effect: "Fragments the main AI Node into a new 
 
 tec_aiauth_experience_tooltip: "\nAI Node Leaders do not gain experience normally. Spare §Y$tec_loc_sr_tec_ai_power$§! gets converted into experience, distributed in a weighted manner between AI nodes.\n\nExperience Weight Share/Total: §Y[tec_aiauth_node_weight_tooltip]/[owner.tec_aiauth_total_weight]§!"
 
+# Extra
 
+tec_loc_empire_scope_effects: "£empire£ §YEmpire§!"
+tec_loc_planet_scope_effects: "£planet£ §YPlanet§!"
+tec_loc_science_ship_scope_effects: "£planet£ §YPlanet§!"
 
 
 
@@ -309,4 +313,3 @@ tec_aiauth_experience_tooltip: "\nAI Node Leaders do not gain experience normall
 #Level		II	III		IV		V			VI		VII		VIII	IX		X
 #XP				400	1100	2100	3400	5000	6900	8100	10600	13400
 #Total XP	400	1500	3600	7000	12000	18900	27000	37600	51000
-
