--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -3,13 +3,32 @@
 
 # Edicts
 
-#new ones
- edict_tec_equality_edict:0 "Equality of opportunities"
- edict_tec_equality_edict_desc:0 "Encourages any unemployed pop to voluntarily resettle themselves to suitable planets with jobs and housing within our empire, for searching new opportunities."
+# Ethics
+  edict_tec_equal_opportunities:0 "Equal Opportunities"
+  edict_tec_equal_opportunities_desc:0 "Encourages any unemployed pop to voluntarily resettle themselves to suitable planets with jobs and housing within our empire, for searching new opportunities."
 
- edict_tec_social_state_edict:0 "Welfare State"
- edict_tec_social_state_edict_desc:0 "This Edict celebrates the success of a welfare state by providing extra £consumer_goods£ §RConsumer Goods§! to the population, generating global £happiness£ §Yhappiness§! and £unity£ §YDevelopment§!."
+  edict_tec_social_benefits:0 "Social Benefits"
+  edict_tec_social_benefits_desc:0 "TODO"
 
+  edict_tec_doing_your_part: "Doing Your Part"
+  edict_tec_doing_your_part_desc: "TODO"
+
+  edict_tec_technological_funding: "Technological Funding"
+  edict_tec_technological_funding_desc: "TODO"
+
+  edict_tec_market_funding: "Market Funding"
+  edict_tec_market_funding_desc: "TODO"
+
+  edict_tec_nature_bond: "Nature Bond"
+  edict_tec_nature_bond_desc: "TODO"
+
+  edict_tec_industrial_overproduction: "Industrial Overproduction"
+  edict_tec_industrial_overproduction_desc: "TODO"
+
+  edict_tec_elite_boosting: "Elite Boosting"
+  edict_tec_elite_boosting_desc: "TODO"
+
+# /
  edict_tec_mortgage_edict:0 "£job_purge£ Eternal Shifts"
  edict_tec_mortgage_edict_desc:0 "Workers will work to pay their debts until they die, and after that they will continue working to pay. Each planet with a §YDread Encampment§Y will receive a bonus of §G30%§! Worker Output, but there is a chance of a worker pop §Rdeath§! every year."
 
