--- a/localisation/english/zz_evolved_l_english.yml
+++ b/localisation/english/zz_evolved_l_english.yml
@@ -12,3 +12,7 @@ requires_ascension_perks_4:0 "$TRIGGER_FAIL$Requires 4 other Ascension Perks to 
 # Resources
  sr_tec_biomass:0 "Biomass"
  sr_tec_biomass_desc:0 "Each single existing creature is nothing but material to build new assets for our collective."
+
+# COUNTRY_MODIFIER:0 "$EMPIRE_EFFECTS_W_ICON$"
+# COUNTRY_MODIFIERS:0 "$EMPIRE_EFFECTS_W_ICON$"
+# EFFECTS: "[scope_icon_and_name]"
